syntax = "proto3";

package api.rpc_sys.v1;

import "common/common.proto";

option go_package = "fkratos/api/rpc_sys/v1;v1";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。
// 后缀定义:请求req,响应reply

// 操作日志
service OperationLog {
  //操作日志列表
  rpc SysOperationLogList(common.SearchListReq) returns (SysOperationLogListResp);
  //单条操作日志
  rpc SysOperationLogInfo(SysOperationLogInfoReq) returns (SysOperationLogInfoResp);
  //操作日志记录
  rpc SysOperationLogStore(SysOperationLogStoreReq) returns (SysOperationLogStoreResp);
}

message SysOperationLogInfo {
  string id = 1; // 编号
  string adminID = 2; // 管理员ID
  string username = 3; // 账号
  string ip = 4; // ip
  string uri = 5; // 请求路径
  string uriDesc = 6; // 请求描述
  string useragent = 7; // 浏览器标识
  string req = 8; // 请求数据
  string resp = 9; // 响应数据
  string createdAt = 10; // 创建时间
}

//请求-操作日志列表
message SysOperationLogListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
}

//响应-操作日志列表
message SysOperationLogListResp {
  repeated SysOperationLogInfo list = 1; //管理员列表
  common.Paginator paginator = 2; //分页
}

//请求-单条操作日志
message SysOperationLogInfoReq {
  string id = 1;
}

//响应-单条操作日志
message SysOperationLogInfoResp {
  SysOperationLogInfo info = 1;
}


//请求-操作日志存储
message SysOperationLogStoreReq {
  string adminID = 1; // 管理员ID
  string username = 2; // 账号
  string ip = 3; // ip
  string uri = 4; // 请求路径
  string uriDesc = 5; // 请求描述
  string useragent = 6; // 浏览器标识
  string req = 7; // 请求数据
  string resp = 8; // 响应数据
}

//响应-操作日志存储
message SysOperationLogStoreResp {
  SysOperationLogInfo info = 1;
}